--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,19 @@ redcarpet:
         - autolink
 
 blog:
-    name: Daodaoliang Blog # 博客名称
-    description: 日日当精进 但求无愧 # 博客描述
-    title: 徐景亮的博客 # 网页标题
-    url: daodaoliang.github.io # 博客地址
-    duoshuo: daodaoliang # 多说ID
-    tongji: daodaoliang # 百度统计ID
+    name: LiangQingYu Blog # 博客名称
+    description: Just do it # 博客描述
+    title: 梁擎宇的博客 # 网页标题
+    url: qingyu1229.github.io # 博客地址
+    duoshuo:  # 多说ID
+    tongji: 339c3dde0596b995600e5fed42918ad8 # 百度统计ID
     qiniu: # 七牛云地址
 author:
-    name: 徐景亮 # 作者名称
-    email: daodaoliang@yeah.net # 邮箱地址
-    weibo: http://weibo.com/u/5336437516 # 微博地址
-    github: https://github.com/daodaoliang # GitHub地址
-    logo: /res/img/psb.jpg # logo地址
+    name: 梁擎宇 # 作者名称
+    email: liangqingyu123@foxmail.com # 邮箱地址
+    weibo: http://weibo.com/u/1811088830  # 微博地址
+    github: https://github.com/qingyu1229  # GitHub地址
+    logo: /res/img/icon2.png # logo地址
     douban:
-        name: http://www.douban.com/people/103498505/    # 豆瓣地址名称
-        key: 07e5af1c9cee1a1a17b10d55d6ca4e4e            # 豆瓣API Key
+        name:    # 豆瓣地址名称
+        key:           # 豆瓣API Key
