--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,19 +1,24 @@
 - href: /page/timing.html
   icon: fa fa-clock-o
   title: 时间轴
+  newblank: false
 
 - href: /page/category.html
   icon: fa fa-tags
   title: 文章分类
+  newblank: false
 
 - href: /life/index.html
   icon: fa fa-eyedropper
   title: 生活轨迹
+  newblank: true
 
 - href: /page/resourse.html
   icon:  fa fa-book
   title: 资源列表
+  newblank: true
   
 - href: /page/about.html
   icon: fa fa-paper-plane-o
   title: 关于自己
+  newblank: true
